@@ -1,4 +1,4 @@
-#	$OpenBSD: envpass.sh,v 1.2 2004/06/22 03:12:13 markus Exp $
+#	$OpenBSD: envpass.sh,v 1.3 2004/06/22 22:42:02 dtucker Exp $
 #	Placed in the Public Domain.
 
 tid="environment passing"
@@ -9,7 +9,7 @@ trace "pass env, don't accept"
 verbose "test $tid: pass env, don't accept"
 _TEST_ENV=blah ${SSH} -oSendEnv="*" -F $OBJ/ssh_proxy otherhost \
 	sh << 'EOF'
-	test -z $_TEST_ENV
+	test -z "$_TEST_ENV"
 EOF
 r=$?
 if [ $r -ne 0 ]; then
@@ -20,7 +20,7 @@ trace "don't pass env, accept"
 verbose "test $tid: don't pass env, accept"
 ${SSH} -F $OBJ/ssh_proxy otherhost \
 	sh << 'EOF'
-	test -z $_XXX_TEST_A && test -z $_XXX_TEST_B
+	test -z "$_XXX_TEST_A" && test -z "$_XXX_TEST_B"
 EOF
 r=$?
 if [ $r -ne 0 ]; then
