@@ -2,6 +2,10 @@
  - (dtucker) [auth1.c] Ensure do_pam_account is called for Protocol 1
    connections with empty passwords.  Patch from davidwu at nbttech.com,
    ok djm@
+ - (dtucker) OpenBSD CVS Sync
+   - dtucker@cvs.openbsd.org 2004/06/22 22:42:02
+     [regress/envpass.sh]
+     Add quoting for test -z; ok markus@
 
 20040622
  - (bal) [auth-passwd.c auth1.c] Clean up unused variables.
@@ -1374,4 +1378,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3433 2004/06/22 23:17:54 dtucker Exp $
+$Id: ChangeLog,v 1.3434 2004/06/22 23:23:58 dtucker Exp $
